--- a/ref.bib
+++ b/ref.bib
@@ -363,6 +363,27 @@ year = {2019},
     year={2004},
 }
 
+@misc{nvgre,
+    title={{NVGRE: Network Virtualization Using Generic Routing Encapsulation}},
+    author={Garg, Pankaj and Wang, Yu-Shun},
+    note={RFC 7637, IETF},
+    year={2015},
+}
+
+@misc{ipinip,
+    title={{IP Encapsulation within IP}},
+    author={Perkins, Charles},
+    note={RFC 2003, IETF},
+    year={1996},
+}
+
+@misc{vxlan,
+    title={{Virtual eXtensible Local Area Network (VXLAN): A Framework for Overlaying Virtualized Layer 2 Networks over Layer 3 Networks}},
+    author={Mahalingam, Mallik and Dutt, Dinesh and Duda, Kenneth and Agarwal, Puneet and Kreeger, Lawrence and Sridhar, T and Bursell, Mike and Wright, Chris},
+    note={RFC 7648, IETF},
+    year={2014},
+}
+
 @misc{fnv-hash,
     title={{The FNV Non-Cryptographic Hash Algorithm}},
     author={Glenn Fowler and Landon Curt Noll and Kiem-Phong Vo and Donald Eastlake and Tony Hansen},
