Updates from Overleaf

--- a/queue-control.tex
+++ b/queue-control.tex
@@ -42,3 +42,15 @@
         \3 We use $\alpha = 100$ and $\beta = 10000$.
     \2 \fc{todo: explain principle of $\alpha$ and $\beta$}
 \end{outline}
+
+% add plot varying queue length
+% maybe measure the amount of time nimbus spent in the correct mode
+
+% 3 iterations of the big experiment for comparison: reasonable qlen, too low, and too high
+
+% 12: constant 48Mbps in the bundle and vary the cross traffic, don't vary within bundle, we expect it won't vary but we'll see
+% 15: vary the amount of traffic in the bundle, larger range
+% get both and then decide what to show 
+
+% 14: broader number of bundles
+ch
